--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -13,7 +13,7 @@
     {% if title %}
         <title>Security Check - {{ title }}</title>
     {% else %}
-        <title>Security Check</title>
+        <title>Secure Attendance</title>
     {% endif %}
     <link rel="icon" type="image/x-icon" href="/static/designs/favicon.png">
 </head>
@@ -21,7 +21,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Security Check</a>
+          <a class="navbar-brand mr-4" href="{{ url_for('home') }}">Secure Attendance</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
